--- a/style.css
+++ b/style.css
@@ -8,17 +8,23 @@
 }
 
 .top-part{
+
+    max-width: 1920px;
+    
     margin: 0;
     padding: 0;
     height: 700px;
-    background: linear-gradient(180deg, #111111 0%, rgba(119, 119, 119, 0) 100%);
+    
+    background: linear-gradient(180deg, #111111 50%, rgba(0, 0, 0, 0) 900%);
+
     ;
 }
 
 .menu-container{
-    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
     padding-top: 2%;
-    margin: 0 auto;
+    
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -201,3 +207,76 @@
   margin-left: 8%;
   background-color: rgba(230, 83, 60, 1);
  }
+
+ .rectangle2{
+    position: absolute;
+    width: 206px;
+    height: 96px;
+    top: 170px;
+    left: 800px;
+    gap: 0px;
+    border-radius: 12px;
+    border: 1px;
+    opacity: 0px;
+    background: rgba(48, 48, 48, 0.54);
+    text-align: center;
+    
+    
+
+ }
+ .rectangle2 h4{
+    margin-top: 7% ;
+    
+ }
+ .rectangle-container2{
+    position: relative;
+    justify-content: center;
+    align-items: center;
+ }
+
+ /* this is section two */
+ .section-two-container{
+    max-width: 1920px;
+    background-color: rgb(0, 0, 0);
+ }
+.two-header{
+    margin-top: -2%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 5%;
+}
+.two-header h1{
+    padding-top: 5%;
+    font-family: "Inter", sans-serif;
+    color: white;
+}
+.two-header p{
+    font-family: "Inter", sans-serif;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.two-image-container{
+    display: flex;
+    margin-left: 10%;
+    margin-right: 10%;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    
+    
+    }
+    .two-image-container img{
+        border-radius: 50%;
+    }
+
+    .two-image h4{
+        font-family: "Inter", sans-serif;
+        color: #ffffff;
+    }
+    .two-image p{
+        font-family: "Inter", sans-serif;
+        color: rgba(255, 255, 255, 0.5);
+        margin-top: -7%;
+    }
