--- a/style.css
+++ b/style.css
@@ -1,32 +1,34 @@
 * {
     margin: 0;
     padding: 0;
+    
   }
 body{
     max-width: 1920px;
     margin: 0 auto;
     background-color: rgb(0, 0, 0);
 }
-.inter-normal {
+/* .inter-normal {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-  }
+  } */
   
   .top-part{
   
+      /* border: 1px solid white; */
       
-      margin: 0;
-      padding: 0;
+      /* margin-bottom: 5%; */
       height: 700px;
       
       background: linear-gradient(180deg, #111111 50%, rgba(0, 0, 0, 0) 900%);
   
-      ;
+      
   }
   
   .menu-container{
+    /* border: 1px solid white; */
       margin-left: 10%;
       margin-right: 10%;
       padding-top: 2%;
@@ -39,10 +41,14 @@ body{
   
   }
   .menu-list{
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 42px;
       display: flex;
       width: 40%;
+      text-align: center;
       list-style: none;
       justify-content: space-around;
+      
       align-content: center;
     
   }
@@ -59,68 +65,109 @@ body{
   }
   
   .menu-list{
+    padding-top: 2px;
+    padding-bottom: 2px;
       font-family: "Inter", sans-serif;
       font-weight: 400;
       font-size: 18px;
       color: white;
+      align-items: center;
+      
   }
   .menu-home{
+    margin-left: -4%;
+    width: 15%;
       background-color: brown;
       border-radius: 15px;
       font-size: 15px;
       font-weight: 400;
-      justify-content: center;
-      align-items: center;
+      
       padding: 5px 5px;
   }
+
+  .head-container{
+    /* border: 1px solid white; */
+    width: 80%;
+    margin: 0 auto;
+    height: 600px;
+   
+    
+ }
   
-  .body-des-container{
-      margin-left: 10%;
-      width: 40%;
-      height: 40%;
+  
+
+ .banner-container{
+    width: 80%;
+    margin: 0 auto;
+    /* border: 1px solid white; */
+    height: 600px;
+    display: flex;
+    justify-content: space-between;
+    
+ }
+ .banner-left{
+    /* border: 1px solid white; */
+    /* margin-left: 5%; */
+      width: 42%;
+      height: 400px;
       font-family: "Inter", sans-serif ;
       font-size: 2rem;
       color: white;
       margin-top: 5%;
-     
-  }
-  
-  
-  .span-style{
-      font-size: 2em;
-      display: inline-block;
-      position: relative;
-      z-index: 1;
-      font-family: 'Miama', sans-serif;
-      font-weight: lighter;
-      transform: translateY(-25%);
-  }
-  
-  .span-style2{
-      left: 15px;
-      display: inline-block;
-      position: relative;
-      z-index: 2;
-      transform: translateY(-55%);
-      
-  }
-  .span-style3{
-      display: inline-block;
-      position: relative;
-      z-index: 3;
-      transform: translateY(-155%);
-      
-  }
-  
-  .body-para{
-      margin-top: -30%;
-      font-size: 16px;
-      color: rgba(255, 255, 255, 0.5);
+}
+.banner-left-main{
+    height: fit-content;
+    /* border: 1px solid white; */
+    
+}
+.body-para{
+    font-size: 0.5em;
+    margin-top: 2%;
+    
+    color: rgba(255, 255, 255, 0.5);
       font-family: "Inter", sans-serif ;
-      ;
-  
+    margin-bottom: 2px;
+}
+ .banner-title{
+    position: relative;
+    line-height: 150px;
+    
   }
-  .body-button1{
+  .shape-stay{
+
+    position: absolute;
+    display: block;
+    top: 25%;
+  }
+  .span-style{
+    font-size: 2em;
+    font-family: 'Miama', sans-serif;
+    font-weight: lighter;
+}
+.body-buttons{
+    display: flex;
+    /* justify-content: space-between; */
+    gap: 5px;
+    margin-top: 5%;
+}
+.body-button1{
+    background-color: antiquewhite;
+    width: 200px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 40px;
+    font-size: 18px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background: rgba(230, 83, 60, 1);
+    border-style: none;
+    color: white;
+ 
+ 
+ }
+ 
+ .body-button2{
      background-color: antiquewhite;
      width: 200px;
      justify-content: center;
@@ -130,52 +177,31 @@ body{
      font-size: 18px;
      padding-top: 10px;
      padding-bottom: 10px;
-     background: rgba(230, 83, 60, 1);
-     border-style: none;
+     background: none;
+     border-style: solid;
      color: white;
+     border-color: white;
   
   
   }
-  
-  .body-button2{
-      background-color: antiquewhite;
-      width: 200px;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      border-radius: 40px;
-      font-size: 18px;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      background: none;
-      border-style: solid;
-      color: white;
-      border-color: white;
-   
-   
-   }
- .head-container{
-    display: flex;
-    justify-content: space-between;
-    
- }
- .header-img{
-    margin-left: 700px;
-    margin-top: -400px;
-    height: 100px;
-    background-color: rgb(68, 127, 179);
- }
- .img1{
-    height: 400px;
-    
- }
 
- .rectangle1{
+  .banner-right{
+    width: 55%;
+    height: 500px;
+    /* border: 1px solid white; */
+  }
+
+  .banner-right img{
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+  }
+  .rectangle1{
     position: absolute;
-    width: 206px;
-    height: 96px;
-    top: 170px;
-    left: 550px;
+    width: 180px;
+    height: 80px;
+    top: -150px;
+    left: 5%;
     gap: 0px;
     border-radius: 12px;
     border: 1px;
@@ -184,17 +210,26 @@ body{
     text-align: center;
     
     
+    
 
  }
 
  .rectangle1 p{
     font-size: small;
-    margin-top: -20%;
-    padding-top: -20%;
+    /* margin-top: -20%;
+    padding-top: -20%; */
+    margin-left: 15%;
+    font-family: "Inter", sans-serif ;
+    color: rgba(255, 255, 255, 0.5);
     
  }
  .rectangle1 h4{
-    margin-top: 7% ;
+    font-family: "Inter", sans-serif ;
+    color: white;
+    font-size: 2em;
+    font-weight: 900;
+    margin-top: 5% ;
+    margin-left: 20%;
     
  }
  .rectangle-container{
@@ -215,35 +250,50 @@ body{
  }
 
  .rectangle2{
-    position: absolute;
-    width: 206px;
-    height: 96px;
-    top: 170px;
-    left: 800px;
+    position: relative;
+    width: 180px;
+    height: 80px;
+    top: -380px;
+    left: 350px;
     gap: 0px;
     border-radius: 12px;
     border: 1px;
     opacity: 0px;
     background: rgba(48, 48, 48, 0.54);
-    text-align: center;
+    padding-left: 10px;
     
     
 
  }
- .rectangle2 h4{
-    margin-top: 7% ;
+ .rectangle2 p{
+    font-size: small;
+    font-family: "Inter", sans-serif ;
+    color: rgba(255, 255, 255, 0.5);
+    
     
  }
+ .rectangle-container2 h4{
+    font-family: "Inter", sans-serif ;
+    color: white;
+    font-size: 2em;
+    font-weight: 900;
+    
+    
+ }
+    
+ 
  .rectangle-container2{
     position: relative;
     justify-content: center;
     align-items: center;
  }
+  
+
 
  /* this is section two */
  
 .two-header{
-    /* margin-top: -5%; */
+    /* margin-top: 5%; */
     justify-content: center;
     align-items: center;
     text-align: center;
