--- a/style.css
+++ b/style.css
@@ -70,23 +70,38 @@ body{
       
       
   }
-  
-  .menu-list{
+  .menu-list a{
+    text-decoration: none;
     padding-top: 2px;
     padding-bottom: 2px;
       font-family: "Inter", sans-serif;
       font-weight: 400;
-      font-size: 18px;
+      /* font-size: 18px; */
+      font-size: calc(0.3em + 1vw);
       color: white;
       align-items: center;
-      
   }
+  .menu-list{
+    align-items: center;
+  }
+  
+  /* .menu-list {
+    padding-top: 2px;
+    padding-bottom: 2px;
+      font-family: "Inter", sans-serif;
+      font-weight: 400;
+      /* font-size: 18px; */
+      /* font-size: calc(0.3em + 1vw);
+      color: white;
+      align-items: center;} */
+      
+  
   .menu-home{
     margin-left: -4%;
     width: 15%;
       background-color: brown;
       border-radius: 15px;
-      font-size: 15px;
+      font-size: calc(0.3em + 1vw);
       font-weight: 400;
       
       padding: 5px 5px;
@@ -128,8 +143,11 @@ body{
     width: 100%;
     height: fit-content;
     /* border: 1px solid white; */
-    font-size: 1em;
+    font-size: calc(1rem + 1vw);
     
+}
+.banner-left-main h1{
+    font-size: calc(2rem + 1vw);
 }
 .body-para{
     /* border: 1px solid red; */
@@ -141,7 +159,7 @@ body{
       font-family: "Inter", sans-serif ;
     margin-bottom: 2px;
 }
- .banner-title{
+ /* .banner-title{
     position: relative;
     line-height: 150px;
     
@@ -156,6 +174,12 @@ body{
     font-size: calc(6rem + 1vw);
     font-family: 'Miama', sans-serif;
     font-weight: lighter;
+} */
+.stay{
+    font-family: 'Miama', sans-serif;
+    font-weight: lighter;
+    font-size: 2em;
+    line-height: 10px;
 }
 .body-buttons{
     display: flex;
@@ -165,14 +189,15 @@ body{
 }
 .body-button1{
     background-color: antiquewhite;
-    width: 200px;
+    width: 50%;
     justify-content: center;
     align-items: center;
     text-align: center;
     border-radius: 40px;
-    font-size: 18px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    /* font-size: 18px; */
+    font-size: calc(0.25em + 1vw);
+    padding-top: 3%;
+    padding-bottom: 3%; 
     background: rgba(230, 83, 60, 1);
     border-style: none;
     color: white;
@@ -182,14 +207,14 @@ body{
  
  .body-button2{
      background-color: antiquewhite;
-     width: 200px;
+     width: 50%;
      justify-content: center;
      align-items: center;
      text-align: center;
      border-radius: 40px;
-     font-size: 18px;
-     padding-top: 10px;
-     padding-bottom: 10px;
+     font-size: calc(0.25em + 1vw);
+     padding-top: 3%;
+     padding-bottom: 3%; 
      background: none;
      border-style: solid;
      color: white;
@@ -209,10 +234,21 @@ body{
     width: 100%;
     object-fit: contain;
   }
+  .rectangle-container{
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    /* border: 1px solid white; */
+ }
   .rectangle1{
+    border: 1px solid white;
+    
     position: absolute;
-    width: 180px;
-    height: 80px;
+    /* width: 180px;
+    height: 80px; */
+    padding-bottom: 5%;
+    width: 40%;
+    height: fit-content;
     top: -150px;
     left: 5%;
     gap: 0px;
@@ -220,52 +256,56 @@ body{
     border: 1px;
     opacity: 0px;
     background: rgba(48, 48, 48, 0.54);
-    text-align: center;
+    /* text-align: center; */
     
     
     
 
+ }
+ .rect-h4{
+    border: 1px solid whitesmoke;
+    font-size: clamp(0.8rem, 2vw, 1.5rem);
  }
 
  .rectangle1 p{
     font-size: small;
     /* margin-top: -20%;
     padding-top: -20%; */
-    margin-left: 15%;
+    margin-left: 40%;
     font-family: "Inter", sans-serif ;
     color: rgba(255, 255, 255, 0.5);
     
  }
  .rectangle1 h4{
+    
     font-family: "Inter", sans-serif ;
     color: white;
-    font-size: 2em;
+    /* font-size: calc(2rem + 1vw); */
+    font-size: clamp(0.8rem, 3vw, 3rem);
     font-weight: 900;
     margin-top: 5% ;
-    margin-left: 20%;
+    margin-left: 40%;
+    
     
  }
- .rectangle-container{
-    position: relative;
-    justify-content: center;
-    align-items: center;
- }
+
 
  .circle{
     position: absolute;
-    width: 40px; 
-  height: 40px; 
+    width: 25%; 
+  height: 50%; 
   
   border-radius: 50%;
   margin-top: 12%;
-  margin-left: 8%;
+  margin-left: 5%;
   background-color: rgba(230, 83, 60, 1);
  }
 
  .rectangle2{
     position: relative;
-    width: 180px;
-    height: 80px;
+    padding-bottom: 5%;
+    width: 40%;
+    height: fit-content;
     top: -380px;
     left: 60%;
     gap: 0px;
@@ -288,7 +328,7 @@ body{
  .rectangle-container2 h4{
     font-family: "Inter", sans-serif ;
     color: white;
-    font-size: 2em;
+    font-size: clamp(0.8rem, 3vw, 3rem);
     font-weight: 900;
     
     
@@ -457,16 +497,17 @@ body{
 
     .four-image-container{
         margin-top: 5%;
+        height: 50%;
         display: flex;
         justify-content: center;
         gap: 10px;
         margin-bottom: 1px;
         padding-bottom: 1px;
+        /* border: 1px solid white; */
     }
     .four-img{
-      
-        width: 200px;
-        height: 200px;
+            width: 20%;
+        height: 90%;
         overflow: hidden;
         border-radius: 12px;
         box-shadow: rgba(64, 230, 108, 0.25) 0px 50px 100px -20px, rgba(96, 158, 128, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
@@ -547,8 +588,26 @@ body{
         font-weight: normal;
         font-family: "Inter", sans-serif;
     }
+    
 
-    .bmi-form button{
+    .bmi-form input{
+        width: 40%;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        border-radius: 10px;
+        font-size: 18px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        background: rgba(255, 255, 255, 0.1);
+        border-style: none;
+        color: rgba(255, 255, 255, 0.5);
+        
+   
+   
+       }
+    
+    /* .bmi-form button{
      width: 40%;
      justify-content: center;
      align-items: center;
@@ -562,7 +621,7 @@ body{
      color: rgba(255, 255, 255, 0.5);
 
 
-    }
+    } */
 
     .bmi-form select{
      width: 40%;
@@ -625,22 +684,22 @@ body{
   
 
     .six-image-container{
-        display: grid;
+        
+        display: grid; 
         grid-template-columns: repeat(3,2fr);
         border-radius: 3px;
         padding-left: 2%;
         padding-right: 2%;
-        
-        
-        
         margin-left: 1%;
         margin-right: 1%;
         gap: 20px;
+        /* border: 1px solid white; */
     }
     .six-image{
+        /* border: 1px solid white; */
         position: relative;
-        height: 250px;
-        width: 300px;
+        height: 100%;
+        width: 100%;
         object-fit: cover;
     }
     .six-image img{
@@ -651,7 +710,7 @@ body{
     }
 
     .six-image h3 {
-        
+        font-size: calc(0.3em + 1vw);
         color: white;
         position: absolute;
         margin-left: 10%;
@@ -660,7 +719,7 @@ body{
     }
 
     .six-image p{
-        
+        font-size: calc(0.1em + 1vw);
         position: absolute;
         margin-left: 10%;
         margin-top: -8%;
@@ -747,6 +806,9 @@ body{
         .menu-list{
             display: none;
         }
+        .for-mobile{
+            display: none;
+        }
         .two-image-container{
             flex-direction: column;
         }
@@ -755,6 +817,10 @@ body{
         }
         .three-des{
             width: 90%;
+        }
+        .three-des button{
+            width: 85%;
+            margin: 0 auto;
         }
         .three-image{
             width: 300px;
@@ -787,6 +853,12 @@ body{
             margin-left: 5%;
             display: flex;
             flex-direction: column;
+        }
+        .six-image h3{
+            font-size: 1em;
+        }
+        .six-image p{
+            font-size: 1em;
         }
         .footer-container{
             flex-direction: column;
@@ -854,6 +926,19 @@ body{
             margin-right: 5%;
             color: #ffffff;
         }
+        .four-image-container{
+            display: grid;
+            grid-template-columns: repeat(2 , 1fr);
+            gap: 0px;
+            align-items: center;
+
+                    }
+                    .four-img{
+                        height: 90%;
+                        width: 90%;
+                        /* border: 1px solid white; */
+                        margin: 0 auto;
+                    }
         
 
 
